patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
  spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: nginx
        image: nginxdemos/text
